@@ -1,32 +1,31 @@
 package optionaldemoWithPerson;
 
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
 import java.util.Optional;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 class OptionalScenariosDemoTest {
 
     List<Person> people = List.of(
             new Person("Jack", 15),
-            //new Person("Jack", 55),
             new Person("Sara", 20),
             new Person("Bob", 20),
             new Person("Paula", 35),
             new Person("Nancy", 40),
             new Person("Bill", 25),
             new Person("Jill", 50),
-            //new Person("Tom", 60),
             new Person("Tom", 70)
     );
 
     @Test
-    //Given a list of persons, get the person's age with name as jack
+    @DisplayName("Given a list of persons, get the age of a person by name (found)")
     public void getAgeOfSpecificPerson() {
-        int age = people.stream()
+        // Stream.findFirst() returns Optional<Person> — we map to age and default to 0
+        var age = people.stream()
                 .filter(e -> e.getName().equalsIgnoreCase("jack"))
                 .findFirst()
                 .map(Person::getAge)
@@ -37,9 +36,10 @@ class OptionalScenariosDemoTest {
     }
 
     @Test
-    //Given a list of persons, get the person's age for a person not existing in the list
+    @DisplayName("Given a list of persons, get 0 when person does not exist")
     public void getAgeOfNonExistingPerson() {
-        int age = people.stream()
+        // findFirst() returns Optional.empty() when no element matches the filter
+        var age = people.stream()
                 .filter(e -> e.getName().equalsIgnoreCase("jacke"))
                 .findFirst()
                 .map(Person::getAge)
@@ -50,25 +50,28 @@ class OptionalScenariosDemoTest {
     }
 
     @Test
-    //Given a list of names, get a list of ages
+    @DisplayName("Given a list of names, collect their ages — two approaches compared")
     public void shouldGetListOfAgesForListOfNames() {
-        List<String> names = List.of("Jack", "Sara");
-        final List<Integer> collect = names.stream()
+        var names = List.of("Jack", "Sara");
+
+        // Approach A (Java 8 style): filter(isPresent) + map(get) — verbose but explicit
+        var agesViaFilter = names.stream()
                 .map(Person::findByName)
                 .filter(Optional::isPresent)
                 .map(Optional::get)
                 .map(Person::getAge)
-                .collect(toList());
-        System.out.println(collect);
+                .toList();  // Java 16+: returns an unmodifiable List directly
+        System.out.println("agesViaFilter = " + agesViaFilter);
 
-        //Using flatMap on Stream of Optionals
-        final List<Integer> collect1 = names.stream()
+        // Approach B (preferred): flatMap(Optional::stream) — empty Optionals vanish automatically
+        var agesViaFlatMap = names.stream()
                 .map(Person::findByName)
                 .flatMap(Optional::stream)
                 .map(Person::getAge)
-                .collect(toList());
+                .toList();  // Java 16+: concise, returns unmodifiable List
+        System.out.println("agesViaFlatMap = " + agesViaFlatMap);
 
-        System.out.println("collect1 = " + collect1);
-        assertThat(collect).containsExactlyInAnyOrder(15, 20);
+        assertThat(agesViaFilter).containsExactlyInAnyOrder(15, 20);
+        assertThat(agesViaFlatMap).containsExactlyInAnyOrder(15, 20);
     }
 }
